--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.16",
     "@tanstack/react-query": "^5.90.5",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -31,6 +32,7 @@
     "react-select": "^5.10.0",
     "sooner": "^1.1.4",
     "swiper": "^11.2.4",
+    "tailwindcss": "^4.1.16",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
