--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.9.5",
     "react-select": "^5.10.0",
+    "sonner": "^2.0.7",
     "sooner": "^1.1.4",
     "swiper": "^11.2.4",
     "tailwindcss": "^4.1.16",
