--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/matter-js": "^0.20.2",
     "axios": "^1.12.2",
     "imagesloaded": "^5.0.0",
     "jquery": "^3.7.1",
@@ -30,7 +31,6 @@
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.9.5",
     "react-select": "^5.10.0",
-    "sonner": "^2.0.7",
     "sooner": "^1.1.4",
     "swiper": "^11.2.4",
     "tailwindcss": "^4.1.16",
